{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 64,
  "lineage": "1755023d-6024-8f16-3f6b-2c7f73058ab5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webinstance1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0502e817a62226e03",
            "arn": "arn:aws:ec2:eu-central-1:572629984572:instance/i-0829b8dbb7b022884",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0829b8dbb7b022884",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EKS-KP",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-033041f4525d96619",
            "private_dns": "ip-172-20-5-182.eu-central-1.compute.internal",
            "private_ip": "172.20.5.182",
            "public_ip": "18.159.41.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08aefc1476051517c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037cce09932b143b4",
            "tags": {
              "Environment": "Test",
              "Name": "Stepping-Stone for EKS"
            },
            "tenancy": "default",
            "volume_tags": {
              "Environment": "Test",
              "Name": "Stepping-Stone for EKS"
            },
            "vpc_security_group_ids": [
              "sg-06fd2fedf23216156",
              "sg-07db9c6e79cb0575c"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_security_group.sg_22",
            "aws_security_group.sg_80",
            "aws_subnet.PublicSubnet1a",
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:572629984572:internet-gateway/igw-0cf8e470cca5bc8d3",
            "id": "igw-0cf8e470cca5bc8d3",
            "owner_id": "572629984572",
            "tags": {
              "Name": "Internet-Gateway-EKS"
            },
            "vpc_id": "vpc-0fcc1281414b105be"
          },
          "dependencies": [
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "EKSVPCNACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:572629984572:network-acl/acl-0db4930bf33a4e728",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-0db4930bf33a4e728",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "572629984572",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "EKSVPCNACL"
            },
            "vpc_id": "vpc-0fcc1281414b105be"
          },
          "dependencies": [
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "EKS-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03a1c2c53e8092416",
            "owner_id": "572629984572",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf8e470cca5bc8d3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EKS-route-table"
            },
            "vpc_id": "vpc-0fcc1281414b105be"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "EKS-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae4bf2d06b500dda",
            "route_table_id": "rtb-03a1c2c53e8092416",
            "subnet_id": "subnet-037cce09932b143b4"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.EKS-route-table",
            "aws_subnet.PublicSubnet1a",
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:572629984572:security-group/sg-06fd2fedf23216156",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fd2fedf23216156",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": null,
            "owner_id": "572629984572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "EKS-SG-22"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcc1281414b105be"
          },
          "dependencies": [
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:572629984572:security-group/sg-07db9c6e79cb0575c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07db9c6e79cb0575c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_80",
            "name_prefix": null,
            "owner_id": "572629984572",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "EKS-SG-80"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcc1281414b105be"
          },
          "dependencies": [
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:572629984572:subnet/subnet-0f051abe2da2b31bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.20.32.0/19",
            "id": "subnet-0f051abe2da2b31bc",
            "map_public_ip_on_launch": false,
            "owner_id": "572629984572",
            "tags": {
              "Name": "PrivateSubnet1a-EKS"
            },
            "vpc_id": "vpc-0fcc1281414b105be"
          },
          "dependencies": [
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnet1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:572629984572:subnet/subnet-08ac0fe241bdcdb82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.20.64.0/19",
            "id": "subnet-08ac0fe241bdcdb82",
            "map_public_ip_on_launch": false,
            "owner_id": "572629984572",
            "tags": {
              "Name": "PrivateSubnet1b-EKS"
            },
            "vpc_id": "vpc-0fcc1281414b105be"
          },
          "dependencies": [
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnet1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:572629984572:subnet/subnet-037cce09932b143b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.20.4.0/22",
            "id": "subnet-037cce09932b143b4",
            "map_public_ip_on_launch": true,
            "owner_id": "572629984572",
            "tags": {
              "Name": "PublicSubnet1a-EKS"
            },
            "vpc_id": "vpc-0fcc1281414b105be"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.EKS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "EKS-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:572629984572:vpc/vpc-0fcc1281414b105be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-06b2619213d1008c6",
            "default_route_table_id": "rtb-062c57164efb0dae1",
            "default_security_group_id": "sg-095968344ffcc9df4",
            "dhcp_options_id": "dopt-b7c478dd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fcc1281414b105be",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-062c57164efb0dae1",
            "owner_id": "572629984572",
            "tags": {
              "Name": "EKS VPC"
            }
          }
        }
      ]
    }
  ]
}